Added working functions using ES6

--- a/src/styles/employed.scss
+++ b/src/styles/employed.scss
@@ -61,6 +61,7 @@ $white: #fff;
     background-color: $white;
     padding: 20px;
     &__employee {
+      padding: 5px 0;
       &:before {
         content: 'Ω';
         padding-right: 15px;
